# CrewCraft

./: .env.example  .gitignore  Dockerfile  Dockerfile.agent  README.md  client.py  docker-compose.yml  main.py  pyproject.toml  todo.md
app/: __init__.py  config.py  database.py  main.py  models.py
app/agent/: mcp.py  prompt_generator.py  server.py  skills.py  tools.py
app/api/: agents.py  tasks.py
app/channels/: __init__.py  base.py  bus.py  cli.py  dingtalk.py  feishu.py  wechat.py
app/cli/: main.py  repl.py
app/engine/: builder.py  runner.py  skills.py
app/gateway/: main.py  orchestrator.py
app/schemas/: api.py
app/services/: workspace.py
backend/: pyproject.toml  requirements.txt
backend/app/: main.py  (+1 more)
cli/: client.py  main.py
docs/: 001-bidirectional-registration.md  002-tools-system.md  003-env-configuration.md  004-orchestrator.md  005-interactive-repl.md  006-docker-agent-deploy.md  007-agent-collaboration.md  008-external-agent-providers.md  009-human-in-the-loop.md  010-channels.md  011-skill-mcp.md  012-im-sdk-integration.md  013-test-suite.md  014-models-and-sdk.md  015-server-agent.md  question.md
frontend/: Dockerfile  index.html  nginx.conf  package.json
tests/: conftest.py  test_agent_manager.py  test_agents.py  test_approval_queue.py  test_base_channel.py  test_bus.py  test_channel_impl.py  test_channel_manager.py  test_config.py  test_gateway_api.py  test_lint.py  test_models.py  test_orchestrator.py  test_providers.py  test_supervisor.py  test_tasks.py  test_tool_registry.py  test_tools.py  test_workspace.py  test_ws_manager.py
(+60 files in other folders)
