[project]
name = "crewcraft"
version = "2.0.0"
description = "Multi-agent collaboration platform with deepagents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "deepagents>=0.6.0",
    "uuid6>=2024.0.0",
    "python-dotenv>=1.0.0",
    "docker>=7.0",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
crewcraft = "app.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
